# mahout

docs/: api.md
qdp/: Cargo.toml
qdp/benchmark/: benchmark_e2e.py
qdp/benchmarks/: README.md  benchmark_e2e_final.py  benchmark_e2e_training.py  benchmark_e2e_training_parquet.py  benchmark_e2e_training_pennylane_qiskit.py  benchmark_e2e_training_v3.py  benchmark_memory.py  benchmark_stress_test.py  benchmark_synthetic.py  generate_dataset.py  prepare_data.py  requirements.txt
qdp/docs/optimization/: DATAFLOW_AND_MEMORY_ANALYSIS.md  DESIGN_COMPLIANCE_CHECKLIST.md  PERFORMANCE_TUNING.md  PR3_COMPLETE_IMPLEMENTATION_PLAN.md  PR3_OPTIMIZATION_SUMMARY_AND_OVERSIGHT.md  PR3_PHASE3_DETAILED_PLAN.md  REQUEST_COALESCING_REFERENCE_AND_DESIGN.md
qdp/qdp-core/: Cargo.toml
qdp/qdp-core/src/: dlpack.rs  io.rs  lib.rs  pipeline_runner.rs  preprocessing.rs  types.rs
qdp/qdp-core/src/encoding/: mod.rs
qdp/qdp-core/src/gpu/: batch_pool.rs  coalescer.rs  cuda_ffi.rs  device_pool.rs  memory.rs  mod.rs  pipeline.rs  pipeline_config.rs  pool.rs  scheduler.rs
qdp/qdp-core/src/gpu/encodings/: amplitude.rs  angle.rs  basis.rs  iqp.rs  mod.rs
qdp/qdp-kernels/: build.rs
qdp/qdp-kernels/src/: amplitude.cu  amplitude_batch.cu  lib.rs
qdp/qdp-python/: README.md  pyproject.toml
qdp/qdp-python/benchmark/: BENCHMARK_DOCUMENTATION.md  CODE_LOGIC_VERIFICATION.md  README.md  benchmark_e2e.py  benchmark_latency.py  benchmark_latency_pytorch.py  benchmark_mnist.py  benchmark_numpy_io.py  benchmark_throughput.py  benchmark_training.py  run_pipeline_baseline.py  test_encode_stream.py
qdp/qdp-python/qumat_qdp/: __init__.py  loader.py  stream.py
qdp/qdp-python/src/: lib.rs  (+1 more)
(+20 files in other folders)
