[package]
name = "qdp-core"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc = { workspace = true }
qdp-kernels = { path = "../qdp-kernels" }
thiserror = { workspace = true }
rayon = { workspace = true }
nvtx = { version = "1.3", optional = true }
arrow = { workspace = true }
parquet = { workspace = true }
num-traits = "0.2"

[lib]
name = "qdp_core"

[features]
default = []
observability = ["nvtx"]
